Configuração do Swagger para listar todos os produtos
