# app/Http/Controllers/ProductController.php
@@ -10,16 +10,18 @@ use Illuminate\Http\JsonResponse;
 class ProductController extends Controller
 {
     /**
-     * @OA\Get(
-     *     tags={"All Products"},
-     *     summary="Returns a list of products",
-     *     description="Returns a array of products",
-     *     path="/api/v1/allproducts",
-     *     @OA\Response(response="200", description="A list with/without products"),
-     *     @OA\Response(response="400", description="Error"),
-     * ),
-     * 
-    */
+ * @OA\Get(
+ *     tags={"All Products"},
+ *     summary="Returns a list of products",
+ *     description="Returns a array of products",
+ *     path="/api/v1/allproducts",
+ *     @OA\Response(
+ *         response=200,
+ *         description="successful operation",
+ *        @OA\JsonContent(ref="#/components/schemas/AllProductsResponse")
+ *     ),
+ * )
+ */
     public function allProducts() {
         $errormessages = []; //to possible validation
         $warningmessages = []; //to possible validation
@@ -27,7 +29,7 @@ class ProductController extends Controller
         $warning = false; //to possible validation
         $values = Product::get(['id','name','price', 'description']);
 
-        return new JsonResponse(['data' => [
+        return new JsonResponse([
             'values' => $values,
             'success' => ($error) ? false : true,
             'message' => $error ? 'Erro ao buscar os dados!' : ($warning ? 'Sucesso com avisos!' : 'Sucesso!'),
@@ -35,6 +37,6 @@ class ProductController extends Controller
             'errormessages' => $errormessages,
             'warnings' => count($warningmessages),
             'warningmessages' => $warningmessages
-        ]], $error ? 400 : 200);        
+        ], $error ? 400 : 200);        
     }
 }
